Fixed header alignment.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,10 @@ header h1:before {
 	content: "";
 }
 
+header h1 {
+	margin: 0 0 0 0;
+}
+
 a {
 	text-decoration: none;
 	padding-bottom: 1px;
